fixed login option alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -571,6 +571,8 @@ body {
 
 .input-options {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 5rem;
     font-size: .7rem;
 }
